Fixed portfolio embed spacing

--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ nav ul li a:hover {
     -o-transform-origin: 0 0;
     -webkit-transform: scale(0.8);
     -webkit-transform-origin: 0 0;
+    margin-bottom: -15%;
 }
 
 /*  APPLICATION SECTION  */
